apps/app/src/styles.css
@layer theme, base, components, utilities;

@import '../../../libs/registry/src/styles/style-vega.css' layer(base);
@import '../../../libs/registry/src/styles/style-nova.css' layer(base);
@import '../../../libs/registry/src/styles/style-lyra.css' layer(base);
@import '../../../libs/registry/src/styles/style-maia.css' layer(base);
@import '../../../libs/registry/src/styles/style-mira.css' layer(base);
@import '../../../libs/registry/src/styles/style-luma.css' layer(base);

@import 'tailwindcss/theme.css' layer(theme);
@import 'tailwindcss/preflight.css' layer(base);
@import 'tailwindcss/utilities.css';

@import '@fontsource/geist-mono/latin';
@import '@fontsource/geist/latin';
@import '@fontsource-variable/noto-sans-hebrew';
@import '@fontsource-variable/noto-sans-arabic';

@import '../../../libs/brain/hlm-tailwind-preset.css';

@custom-variant style-vega (&:where(.style-vega *));
@custom-variant style-nova (&:where(.style-nova *));
@custom-variant style-lyra (&:where(.style-lyra *));
@custom-variant style-maia (&:where(.style-maia *));
@custom-variant style-mira (&:where(.style-mira *));

@custom-variant fixed (&:is(.layout-fixed *));

@theme inline {
	--font-ar: var(--font-ar);
	--font-he: var(--font-he);
	--breakpoint-3xl: 1600px;
	--breakpoint-4xl: 2000px;

	--color-surface: var(--surface);
	--color-surface-foreground: var(--surface-foreground);
	--spotlight-gradient: 68.54% 68.72% at 55.02% 31.46%, #d9d9d914 0, #8c8c8c05 50%, #73737300 80%;
}

:root {
	color-scheme: light;
	--font-sans: 'Geist', sans-serif;
	--font-mono: 'Geist Mono', monospace;
	--font-ar: 'Noto Sans Arabic", "Noto Sans Arabic Fallback';
	--font-he: 'Noto Sans Hebrew","Noto Sans Hebrew Fallback';
	--radius: 0.625rem;
	--background: oklch(1 0 0);
	--foreground: oklch(0.145 0 0);
	--card: oklch(1 0 0);
	--card-foreground: oklch(0.145 0 0);
	--popover: oklch(1 0 0);
	--popover-foreground: oklch(0.145 0 0);
	--primary: oklch(0.205 0 0);
	--primary-foreground: oklch(0.985 0 0);
	--secondary: oklch(0.97 0 0);
	--secondary-foreground: oklch(0.205 0 0);
	--muted: oklch(0.97 0 0);
	--muted-foreground: oklch(0.556 0 0);
	--accent: oklch(0.97 0 0);
	--accent-foreground: oklch(0.205 0 0);
	--destructive: oklch(0.577 0.245 27.325);
	--border: oklch(0.922 0 0);
	--input: oklch(0.922 0 0);
	--ring: oklch(0.708 0 0);
	--sidebar: oklch(0.985 0 0);
	--sidebar-foreground: oklch(0.145 0 0);
	--sidebar-primary: oklch(0.205 0 0);
	--sidebar-primary-foreground: oklch(0.985 0 0);
	--sidebar-accent: oklch(0.97 0 0);
	--sidebar-accent-foreground: oklch(0.205 0 0);
	--sidebar-border: oklch(0.922 0 0);
	--sidebar-ring: oklch(0.708 0 0);
	--surface: oklch(0.98 0 0);
	--surface-foreground: var(--foreground);
}

.dark {
	color-scheme: dark;
	--background: oklch(0.145 0 0);
	--foreground: oklch(0.985 0 0);
	--card: oklch(0.205 0 0);
	--card-foreground: oklch(0.985 0 0);
	--popover: oklch(0.205 0 0);
	--popover-foreground: oklch(0.985 0 0);
	--primary: oklch(0.922 0 0);
	--primary-foreground: oklch(0.205 0 0);
	--secondary: oklch(0.269 0 0);
	--secondary-foreground: oklch(0.985 0 0);
	--muted: oklch(0.269 0 0);
	--muted-foreground: oklch(0.708 0 0);
	--accent: oklch(0.269 0 0);
	--accent-foreground: oklch(0.985 0 0);
	--destructive: oklch(0.704 0.191 22.216);
	--border: oklch(1 0 0 / 10%);
	--input: oklch(1 0 0 / 15%);
	--ring: oklch(0.556 0 0);
	--sidebar: oklch(0.205 0 0);
	--sidebar-foreground: oklch(0.985 0 0);
	--sidebar-primary: oklch(0.985 0 0);
	--sidebar-primary-foreground: oklch(0.205 0 0);
	--sidebar-accent: oklch(0.269 0 0);
	--sidebar-accent-foreground: oklch(0.985 0 0);
	--sidebar-border: oklch(1 0 0 / 10%);
	--sidebar-ring: oklch(0.556 0 0);
	--surface: oklch(0.2 0 0);
	--surface-foreground: oklch(0.708 0 0);
}

@layer base {
	* {
		@apply border-border outline-ring/50;
	}

	body {
		@apply bg-background text-foreground;
	}
}

[hidden]:where(:not([hidden='until-found'])) {
	display: none !important;
}

@utility container-wrapper {
	@apply 3xl:fixed:max-w-[calc(var(--breakpoint-2xl)+2rem)] mx-auto w-full px-2;
}

@utility container {
	@apply 3xl:max-w-screen-2xl mx-auto max-w-[1400px] px-4 lg:px-8;
}

[data-lang='ar'] {
	font-family: var(--font-ar);
}

[data-lang='he'] {
	font-family: var(--font-he);
}

